# slotsmith-governed-demo

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  compose.yaml  pyproject.toml
.github/workflows/: ci.yml
docs/: release-readiness.md  review-checkpoints.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  main.tsx  styles.css
scripts/: run_demo.py
src/slotsmith/: __init__.py  agent_tools.py  api.py  domain.py  engine.py  seed.py  service.py
tests/: test_agent_tools.py  test_api.py  test_governance.py  test_optimizer.py  test_release_artifacts.py  test_seed_and_constraints.py
